<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rl_btn" />

    <RelativeLayout
        android:id="@+id/et_bodyvalue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_url"
            android:layout_alignRight="@+id/tv_key"
            android:singleLine="true"
            android:text="@string/tv_url"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_url"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/et_url"
            android:inputType="textCapCharacters|textUri"
            android:nextFocusDown="@+id/et_key" >
        </EditText>

        <TextView
            android:id="@+id/tv_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_key"
            android:layout_alignRight="@+id/tv_contain"
            android:layout_below="@+id/tv_url"
            android:singleLine="true"
            android:text="@string/tv_key"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_url"
            android:layout_toRightOf="@+id/tv_key"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/et_key_hint"
            android:inputType="text"
            android:nextFocusDown="@+id/et_contain" >
        </EditText>

        <TextView
            android:id="@+id/tv_contain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_contain"
            android:layout_below="@+id/tv_key"
            android:singleLine="true"
            android:text="@string/tv_contain"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_contain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_key"
            android:layout_toRightOf="@+id/tv_contain"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/et_contain_hint"
            android:inputType="text|textUri"
            android:nextFocusUp="@+id/et_key" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_bodyvalue"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_get"
            android:text="@string/bt_clearb" />

        <Button
            android:id="@+id/bt_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_post"
            android:text="@string/bt_get" />

        <Button
            android:id="@+id/bt_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_add_param"
            android:text="@string/bt_post" />

        <Button
            android:id="@+id/bt_add_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/bt_add" />
    </RelativeLayout>

</RelativeLayout>