<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/rl_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_get"
            android:text="@string/bt_clearb" />

        <Button
            android:id="@+id/bt_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_post"
            android:text="@string/bt_get" />

        <Button
            android:id="@+id/bt_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_add_param"
            android:text="@string/bt_post" />

        <Button
            android:id="@+id/bt_add_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_add_head"
            android:text="@string/bt_add_param" />

        <Button
            android:id="@+id/bt_add_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/bt_add_head" />
    </RelativeLayout>
        <ListView
        android:id="@+id/list_contain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_btn"
        android:layout_centerHorizontal="true"
        android:cacheColorHint="@android:color/transparent" 
        android:divider="#2F4F4F"
        android:dividerHeight="10dp">
    </ListView>

</RelativeLayout>