<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/rl_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_url"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_url"
            android:layout_toRightOf="@+id/tv_url"
            android:ems="10"
            android:hint="@string/et_url" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_url"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/tv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_s_head"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_headkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tv_headvalue"
            android:layout_below="@+id/tv_head"
            android:text="@string/tv_key"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_headkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_headkey"
            android:layout_toRightOf="@+id/tv_headkey"
            android:ems="10"
            android:hint="@string/et_key_hint" />

        <TextView
            android:id="@+id/tv_headvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_headkey"
            android:text="@string/tv_contain"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_headvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_headkey"
            android:layout_toRightOf="@+id/tv_headvalue"
            android:ems="10"
            android:hint="@string/et_contain_hint" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_head" 
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_s_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_bodykey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/tv_bodyvalue"
            android:layout_below="@+id/tv_body"
            android:text="@string/tv_key"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_bodykey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_bodykey"
            android:layout_toRightOf="@+id/tv_bodykey"
            android:ems="10"
            android:hint="@string/et_key_hint" />

        <TextView
            android:id="@+id/tv_bodyvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/et_bodyvalue"
            android:layout_below="@+id/tv_bodykey"
            android:text="@string/tv_contain"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_bodyvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_bodykey"
            android:layout_toRightOf="@+id/tv_bodyvalue"
            android:ems="10"
            android:hint="@string/et_contain_hint" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rl_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_body"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/bt_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_get"
            android:text="@string/bt_clearb" />

        <Button
            android:id="@+id/bt_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_post"
            android:text="@string/bt_get" />

        <Button
            android:id="@+id/bt_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/bt_add_param"
            android:text="@string/bt_post" />

        <Button
            android:id="@+id/bt_add_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/bt_add" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rl_button" />

</RelativeLayout>